@@ -1,3 +1,8 @@
+Fri Feb  8 17:33:20 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gui/greeter/greeter_action_language.c (greeter_action_language):
+	first cut at language selection.
+
 2002-02-07  Alex Larsson  <alexl@redhat.com>
 
 	* gui/greeter/Makefile.am (INCLUDES):
